--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
   <!-- Color the status bar on mobile devices -->
   <meta name="theme-color" content="#2F3BA2">
   <title>weichat</title>
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="bower_components/Swiper/dist/css/swiper.css">
-  <link rel="stylesheet" href="iconfont/iconfont.css">
-  <link rel="stylesheet" href="iconfontss/iconfont.css">
-  <link rel="stylesheet" href="ux_1465521173_0288672/iconfont.css">
-  <link rel="stylesheet" href="css/index.css">
-  <script src=".\bower_components\jquery\dist\jquery.js"></script>
-  <script src=".\bower_components\bootstrap\dist\js\bootstrap.js"></script>
-  <script src=".\bower_components\Swiper\dist\js\swiper.jquery.js"></script>
-  <script src=".\bower_components\angular\angular.js"></script>
-  <script src=".\bower_components\angular-animate\angular-animate.js"></script>
-  <script src=".\bower_components\angular-route\angular-route.js"></script>
-  <script src=".\bower_components\angular-touch\angular-touch.js"></script>
+  <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="./bower_components/Swiper/dist/css/swiper.css">
+  <link rel="stylesheet" href="./iconfont/iconfont.css">
+  <link rel="stylesheet" href="./iconfontss/iconfont.css">
+  <link rel="stylesheet" href="./if/iconfont.css">
+  <link rel="stylesheet" href="./css/index.css">
+  <script src="./bower_components/jquery/dist/jquery.js"></script>
+  <script src="./bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="./bower_components/Swiper/dist/js/swiper.jquery.js"></script>
+  <script src="./bower_components/angular/angular.js"></script>
+  <script src="./bower_components/angular-animate/angular-animate.js"></script>
+  <script src="./bower_components/angular-route/angular-route.js"></script>
+  <script src="./bower_components/angular-touch/angular-touch.js"></script>
 </head>
 <body ng-controller="indexCtrl">
   <uq-header></uq-header>
   <ng-view></ng-view>
   <uq-footer></uq-footer>
-  <script src=".\js\index.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
